[package]
name = "warikan-sats-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bip39 = { version = "2.0.0", features = ["rand_core"] }
gl-client = { git = "https://github.com/Blockstream/greenlight.git", version = "0.1.9" }

## v0.3 requires bitcoin 0.30, but gl-client uses bitcoin 0.29.2, so we keep this at v0.2 which also uses bitcoin 0.29
# bip21 = "0.2"
# bitcoin = "0.29.2"
#gl-client = { git = "https://github.com/Blockstream/greenlight.git", features = [
#  "permissive",
#], rev = "556eedf47a837b71c4277ba6ee84322f5cbd80de" }

rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
